--- a/celery/install.txt
+++ b/celery/install.txt
@@ -1,7 +1,15 @@
 pip install celery
-pip install redis
-sudo apt-get install redis-server
+pip install django-redis
 
+
+***** install redis using sudo ************
+sudo apt-get install redis-server
+*********** install redis using docker *************
+
+docker pull redis:latest
+docker run -d --name my-redis -p 6379:6379 redis:latest
+docker exec -it my-redis redis-cli
+exit
 
 ************************* if not working with old installation ******************
 
@@ -27,10 +35,5 @@ Verify the status of the Redis service to ensure it is running without any error
 sudo systemctl status redis-server.service
 
 
-*********** install redis using docker *************
 
-docker pull redis:latest
-docker run -d --name my-redis -p 6379:6379 redis:latest
-docker exec -it my-redis redis-cli
-exit
 
